--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Connor W. Coley"
 title_separator          : "-"
 name                     : &name "Connor W. Coley"
 description              : &description "Academic website"
-url                      : https://connorcoley.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://mwleklin.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "connorcoley/connorcoley.github.io"
+repository               : "mwleklin/mwleklin.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
