--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ author:
   name             : "Michael Wleklinski"
   avatar           : 
   bio              : "Engineering Postdoc @ Eli Lilly and Company"
-  location         : "Cambridge, MA"
+  location         : "Indianapolis, IN"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=x7s9KK8AAAAJ&hl=en"
   email            : "m.wleklinski@lilly.com"
