--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ author:
   stackoverflow    : 
   steam            :
   tumblr           :
-  twitter          : "mwleklin"
+  twitter          : "m_wleklinski"
   vine             :
   weibo            :
   xing             :
