--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ analytics:
 # Site Author
 author:
   name             : "Michael Wleklinski"
-  avatar           : 
+  avatar           : "download.png"
   bio              : "Engineering Postdoc @ Eli Lilly and Company"
   location         : "Indianapolis, IN"
   employer         :
