--- a/_config.yml
+++ b/_config.yml
@@ -70,10 +70,7 @@ social:
 
 
 # Analytics
-analytics:
-  provider               :  "google-universal" # false (default), "google", "google-universal", "custom"
-  google:
-    tracking_id          : "UA-28798435-3"
+google_analytics: UA-132433362-1
 
 
 # Site Author
